package SmartHomeControl;

public class Curtain extends SmartDevice {
    public Curtain(String name) {
        super(name);
    }

    @Override
    protected void check() {
    }

    @Override
    protected void powerOn() {
    }

    @Override
    protected void startFan() {
    }
}
