package SmartHomeControl;

public interface DeviceState {
    void turnOn(SmartDevice device);
    void turnOff(SmartDevice device);
}
