package SmartHomeControl;

public interface DeviceStrategy {
    void execute();
}
