package SmartHomeControl;

public class Light extends SmartDevice {
    public Light(String name) {
        super(name);
    }

    @Override
    protected void check() {
    }

    @Override
    protected void powerOn() {
    }

    @Override
    protected void startFan() {
    }
}
