package SmartHomeControl;

public interface Observer {
    void update(double temperature);
}
